@@ -1,3 +1,8 @@
+Mon Aug 11 12:45:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/OS_NS_stdio.cpp:
+          Simplified some methods
+
 Mon Aug 11 08:56:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Log_Msg_Test.cpp:
